Travel::Status::DE::VRR 3.14 - Mon Jul 14 2025

    * Fix handling of stops with just a single departure

Travel::Status::DE::VRR 3.13 - Thu Jun 19 2025

    * EFA->new_p: Return $self in case of error so that clients can access
      place_candidates and name_candidates. This behaviour was already
      documented, but not implemented.

Travel::Status::DE::VRR 3.12 - Wed Jun 18 2025

    * Departure->id: Include the scheduled departure time. This fixes cases
      where the trip details (stopseq) endpoint would randomly return
      yesterday's details or no usable data at all.
    * efa-m: Trip detail mode now only accepts trip IDs obtained from v3.12+

Travel::Status::DE::VRR 3.11 - Mon Jun 16 2025

    * efa-m: Show occupancy in trip details
    * Trip->route: Provide occupancy data

Travel::Status::DE::VRR 3.10 - Sun Jun 15 2025

    * Stop: Add is_cancelled accessor
    * Add BEG, RVV service definitions
    * Breaking change: $efa->name_candidates and $efa->place_candidates now
      return lists of Travel::Status::DE::EFA::Stop objects rather than
      just strings.

Travel::Status::DE::VRR 3.09 - Sun Mar 23 2025

    * Trip: Add polyline accessor

Travel::Status::DE::VRR 3.08 - Sat Feb 08 2025

    * EFA->new_p: Return $efa instance in rejected promise if it was
      rejected after parsing (e.g. due to ambiguous name/place parameter)

Travel::Status::DE::VRR 3.07 - Mon Jan 27 2025

    * Departure: Fix ->id accessor
    * Add "Rolph" service definition

Travel::Status::DE::VRR 3.06 - Sun Jan 05 2025

    * EFA APIs know two types of stop IDs: numbers and codes. This module now
      consistently refers to numeric stop IDs as "id_num" and stop ID codes as
      "id_code".
    * Departure: Rename ->stop_id to ->stop_id_num
    * Stop: Rename ->id to ->id_num
    * Stop: Rename ->stop_id to ->id_code
    * Departure: Add ->id accessor.

Travel::Status::DE::VRR 3.05 - Mon Dec 30 2024

    * efa-m: add --raw-json option